1.为开发环境引入假人 2.修复释放sa时切刀多次释放SA 3.修正伤害计算公式（去除了不稳定的攻击冷却影响） 4.添加可配置内容：拔刀剑伤害系数(影响所有拔刀能造成的伤害)、拔刀锻造系数(影响满足评分后每级锻造增加的伤害)

--- a/build.gradle
+++ b/build.gradle
@@ -162,7 +162,11 @@ repositories {
 	maven {
 		name = "TerraformersMC"
 		url = "https://maven.terraformersmc.com/"
-	}    
+	}
+
+    maven {
+        url "https://cursemaven.com"
+    }
 
 }
 
@@ -193,7 +197,10 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
     implementation fg.deobf("dev.kosmx.player-anim:player-animation-lib-forge:${project.player_anim}")
-    
+
+    //假人(含前置)
+    runtimeOnly fg.deobf("curse.maven:selene-499980:6023899")
+    runtimeOnly fg.deobf("curse.maven:mmmmmmmmmmmm-225738:5737040")
         // compile against the JEI API but do not include it at runtime
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"))
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
