--- a/build.gradle
+++ b/build.gradle
@@ -308,7 +308,7 @@ publisher {
     // For example: markdown.md, or "This is my changelog"
     // Or: https://raw.githubusercontent.com/hypherionmc/changelogs/changelog.md
     // Or https://gist.githubusercontent.com/hypherionmc/92f825d3c9337964cc77c9c8c9bf65e6/raw/ceeaaee5b98c688a23398864fe480b84796a1651/test_gist.md
-    setChangelog("Check it in Github Repo.")
+    setChangelog("Changelog WIP...")
 
     // Required for Modrinth/GitHub
     setVersion("${project.version}")
