--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,5 @@
 buildscript {
     dependencies {
-        //classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        // Mixin
-        //classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
         classpath 'org.spongepowered:mixingradle:0.7.+'
     }
 }
@@ -24,72 +21,18 @@ base {
     archivesName = "SlashBladeResharped-1.20.1"
 }
 
-// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-    // The mappings can be changed at any time and must be in the following format.
-    // Channel:   Version:
-    // official   MCVersion             Official field/method names from Mojang mapping files
-    // parchment  YYYY.MM.DD-MCVersion  Open community-sourced parameter names and javadocs layered on top of official
-    //
-    // You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
-    // See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
-    //
-    // Parchment is an unofficial project maintained by ParchmentMC, separate from MinecraftForge
-    // Additional setup is needed to use their mappings: https://github.com/ParchmentMC/Parchment/wiki/Getting-Started
-    //
-    // Use non-default mappings at your own risk. They may not always work.
-    // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: mapping_channel, version: mapping_version
-
-    // When true, this property will have all Eclipse/IntelliJ IDEA run configurations run the "prepareX" task for the given run configuration before launching the game.
-    // In most cases, it is not necessary to enable.
-    // enableEclipsePrepareRuns = true
-    // enableIdeaPrepareRuns = true
-
-    // This property allows configuring Gradle's ProcessResources task(s) to run on IDE output locations before launching the game.
-    // It is REQUIRED to be set to true for this template to function.
-    // See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
     copyIdeResources = true
-
-    // When true, this property will add the folder name of all declared run configurations to generated IDE run configurations.
-    // The folder name can be set on a run configuration using the "folderName" property.
-    // By default, the folder name of a run configuration is the name of the Gradle project containing it.
-    // generateRunFolders = true
-
-    // This property enables access transformers for use in development.
-    // They will be applied to the Minecraft artifact.
-    // The access transformer file can be anywhere in the project.
-    // However, it must be at "META-INF/accesstransformer.cfg" in the final mod jar to be loaded by Forge.
-    // This default location is a best practice to automatically put the file in the right place in the final jar.
-    // See https://docs.minecraftforge.net/en/latest/advanced/accesstransformers/ for more information.
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
-
-    // Default run configurations.
-    // These can be tweaked, removed, or duplicated as needed.
     runs {
-        // applies to all the run configs below
         configureEach {
             workingDirectory project.file('run')
-
-            // Recommended logging data for a userdev environment
-            // The markers can be added/remove as needed separated by commas.
-            // "SCAN": For mods scan.
-            // "REGISTRIES": For firing of registry events.
-            // "REGISTRYDUMP": For getting the contents of all registries.
             property 'forge.logging.markers', 'REGISTRIES'
-
-            // Recommended logging level for the console
-            // You can set various levels here.
-            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
-
-            // Mixin
-            args "-mixin.config=slashblade.mixins.json"
-            args "-mixin.config=slashblade.thetwilightforest.mixins.json"
-
 
             mods {
                 "${mod_id}" {
@@ -97,9 +40,8 @@ minecraft {
                 }
             }
         }
-        
+
         client {
-            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
             property 'forge.enabledGameTestNamespaces', mod_id
 
             property 'mixin.env.remapRefMap', 'true'
@@ -113,18 +55,13 @@ minecraft {
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
         }
 
-        // This run config launches GameTestServer and runs all registered gametests, then exits.
-        // By default, the server will crash when no gametests are provided.
-        // The gametest system is also enabled by default for other run configs under the /test command.
         gameTestServer {
             property 'forge.enabledGameTestNamespaces', mod_id
         }
 
         data {
-            // example of overriding the workingDirectory set in configureEach above
             workingDirectory project.file('run-data')
 
-            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
             args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
         }
     }
@@ -132,41 +69,38 @@ minecraft {
 
 // Mixin
 mixin {
-    add sourceSets.main, "slashblade.refmap.json"
+    add(sourceSets.main, "slashblade.refmap.json")
     config 'slashblade.mixins.json'
     config 'slashblade.thetwilightforest.mixins.json'
 
-    debug.verbose = true
-    debug.export = true
+    debug {
+        verbose = true
+        exportMixinAP = true
+    }
 }
 
-// Include resources generated by data generators.
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    // Put repositories for dependencies here
-    // ForgeGradle automatically adds the Forge maven and Maven Central for you
 
-    // If you have mod jar dependencies in ./libs, you can declare them as a repository like so.
-    // See https://docs.gradle.org/current/userguide/declaring_repositories.html#sub:flat_dir_resolver
-    // flatDir {
-    //     dir 'libs'
-    // }
+     flatDir {
+         dir 'libs'
+     }
     maven {
         name "KosmX's maven"
         url 'https://maven.kosmx.dev/'
     }
-    
+
     maven {
-      // location of a maven mirror for JEI files, as a fallback
-      name = "ModMaven"
-      url = "https://modmaven.dev"
+        // location of a maven mirror for JEI files, as a fallback
+        name = "ModMaven"
+        url = "https://modmaven.dev"
     }
-    
-	maven {
-		name = "TerraformersMC"
-		url = "https://maven.terraformersmc.com/"
-	}
+
+    maven {
+        name = "TerraformersMC"
+        url = "https://maven.terraformersmc.com/"
+    }
 
     maven {
         url "https://cursemaven.com"
@@ -177,7 +111,7 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    // Apply Mixin AP
+    //添加 Mixin 支持
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
     implementation fg.deobf("dev.kosmx.player-anim:player-animation-lib-forge:${project.player_anim}")
@@ -185,7 +119,7 @@ dependencies {
     //假人(含前置)
     runtimeOnly fg.deobf("curse.maven:selene-499980:6023899")
     runtimeOnly fg.deobf("curse.maven:mmmmmmmmmmmm-225738:5737040")
-        // compile against the JEI API but do not include it at runtime
+    // compile against the JEI API but do not include it at runtime
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"))
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
     // at runtime, use the full JEI jar for Forge
@@ -194,9 +128,10 @@ dependencies {
     //暮色森林
     implementation fg.deobf("curse.maven:the-twilight-forest-227639:5468648")
     //compileOnly fg.deobf("dev.emi:emi-forge:${emi_version}:api")
-	//runtimeOnly fg.deobf("dev.emi:emi-forge:${emi_version}") 
-	
-	//FTB Quests
+    //runtimeOnly fg.deobf("dev.emi:emi-forge:${emi_version}")
+
+    //FTB Quests
+    implementation fg.deobf("curse.maven:architectury-api-419699:5137938")
     implementation fg.deobf("curse.maven:ftb-quests-forge-289412:6167056")
     implementation fg.deobf("curse.maven:ftb-library-forge-404465:6164053")
     implementation fg.deobf("curse.maven:ftb-teams-forge-404468:6130786")
@@ -249,10 +184,10 @@ java {
 publishing {
     publications {
         register('mavenJava', MavenPublication) {
-        	artifact jar
-	    }
-	}
-	
+            artifact jar
+        }
+    }
+
     repositories {
         maven {
             url "file://${maven_loc}"
@@ -265,7 +200,7 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 publisher {
-    // Setup the required API keys. You only need to define the keys for 
+    // Setup the required API keys. You only need to define the keys for
     // the platforms you plan on uploading to
     apiKeys {
         // Modrinth Token
@@ -325,22 +260,22 @@ publisher {
     // which could possibly mean that the jar is empty
     setDisableEmptyJarCheck(true)
 
-	// Curse Dependencies
-	curseDepends {
-	    // Optional dependency
-	    optional 'playeranimator'
+    // Curse Dependencies
+    curseDepends {
+        // Optional dependency
+        optional 'playeranimator'
 
-	    // Optional dependency
-	    optional 'jei'
-	    
-	    // Optional dependency
-	    optional 'the-twilight-forest'
-	}
-	
-	modrinthDepends {
-	    // Optional dependency
-	    optional 'playeranimator'
-	    optional 'jei'
-	}
+        // Optional dependency
+        optional 'jei'
+
+        // Optional dependency
+        optional 'the-twilight-forest'
+    }
+
+    modrinthDepends {
+        // Optional dependency
+        optional 'playeranimator'
+        optional 'jei'
+    }
 
 }
