1.修复拔刀安装神话模组附魔等级宝石时敲附魔会时其它附魔等级上升的问题。 #86 2.耀魂类物品敲击不再会导致刀挂台上的拔刀掉落。

--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,11 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:configured-457570:5180900")
     runtimeOnly fg.deobf("curse.maven:nbtedit-reborn-678133:5984630")
 
+    //神化
+    runtimeOnly fg.deobf("curse.maven:apothic-attributes-898963:5634071")
+    runtimeOnly fg.deobf("curse.maven:placebo-283644:6274231")
+    runtimeOnly fg.deobf("curse.maven:apotheosis-313970:6461960")
+
     //暮色森林
     implementation fg.deobf("curse.maven:the-twilight-forest-227639:5468648")
     //compileOnly fg.deobf("dev.emi:emi-forge:${emi_version}:api")
