--- a/build.gradle
+++ b/build.gradle
@@ -142,7 +142,7 @@ dependencies {
     //runtimeOnly fg.deobf("dev.emi:emi-forge:${emi_version}")
 
     //FTB Quests
-    runtimeOnly fg.deobf("curse.maven:architectury-api-419699:5137938")
+    implementation fg.deobf("curse.maven:architectury-api-419699:5137938")
     implementation fg.deobf("curse.maven:ftb-quests-forge-289412:6167056")
     implementation fg.deobf("curse.maven:ftb-library-forge-404465:6164053")
     implementation fg.deobf("curse.maven:ftb-teams-forge-404468:6130786")
