--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -69,3 +69,10 @@ description='''${mod_description}'''
 # stop your mod loading on the server for example.
 #[features.${mod_id}]
 #openGLVersion="[3.2,)"
+[[dependencies.${mod_id}]]
+    modId="apotheosis"
+    mandatory=false
+# This version range declares a minimum of the current minecraft version up to but not including the next major version
+    versionRange="[0.0.0,)"
+    ordering="AFTER"
+    side="BOTH"
