--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ mixin {
     add(sourceSets.main, "slashblade.refmap.json")
     config 'slashblade.mixins.json'
     config 'slashblade.thetwilightforest.mixins.json'
-
+    config 'slashblade.patchouli.mixins.json'
     debug {
         verbose = true
         exportMixinAP = true
@@ -101,6 +101,9 @@ repositories {
         name = "TerraformersMC"
         url = "https://maven.terraformersmc.com/"
     }
+    
+        // Patchouli
+    maven { url = 'https://maven.blamejared.com' }
 
     maven {
         url "https://cursemaven.com"
@@ -140,7 +143,8 @@ dependencies {
     implementation fg.deobf("curse.maven:the-twilight-forest-227639:5468648")
     //compileOnly fg.deobf("dev.emi:emi-forge:${emi_version}:api")
     //runtimeOnly fg.deobf("dev.emi:emi-forge:${emi_version}")
-
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-83-FORGE")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-83-FORGE")
 }
 
 tasks.named('processResources', ProcessResources).configure {
