--- a/build.gradle
+++ b/build.gradle
@@ -141,8 +141,11 @@ dependencies {
 
     //暮色森林
     implementation fg.deobf("curse.maven:the-twilight-forest-227639:5468648")
+
+    implementation fg.deobf("curse.maven:emi-580555:6420945")
     compileOnly fg.deobf("dev.emi:emi-forge:${emi_version}:api")
     runtimeOnly fg.deobf("dev.emi:emi-forge:${emi_version}")
+
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-83-FORGE")
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-83-FORGE")
 }
