--- a/build.gradle
+++ b/build.gradle
@@ -129,8 +129,8 @@ dependencies {
     implementation fg.deobf("dev.kosmx.player-anim:player-animation-lib-forge:${project.player_anim}")
 
     //假人(含前置)
-    runtimeOnly fg.deobf("curse.maven:selene-499980:6023899")
-    runtimeOnly fg.deobf("curse.maven:mmmmmmmmmmmm-225738:5737040")
+    //runtimeOnly fg.deobf("curse.maven:selene-499980:6023899")
+    //runtimeOnly fg.deobf("curse.maven:mmmmmmmmmmmm-225738:5737040")
     // compile against the JEI API but do not include it at runtime
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"))
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
@@ -141,12 +141,12 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:nbtedit-reborn-678133:5984630")
 
     //神化
-    runtimeOnly fg.deobf("curse.maven:apothic-attributes-898963:5634071")
-    runtimeOnly fg.deobf("curse.maven:placebo-283644:6274231")
-    runtimeOnly fg.deobf("curse.maven:apotheosis-313970:6461960")
+    //runtimeOnly fg.deobf("curse.maven:apothic-attributes-898963:5634071")
+    //runtimeOnly fg.deobf("curse.maven:placebo-283644:6274231")
+    //runtimeOnly fg.deobf("curse.maven:apotheosis-313970:6461960")
 
     //史诗战斗
-    runtimeOnly fg.deobf("curse.maven:epic-fight-mod-405076:6640098")
+    //runtimeOnly fg.deobf("curse.maven:epic-fight-mod-405076:6640098")
 
     //暮色森林
     implementation fg.deobf("curse.maven:the-twilight-forest-227639:5468648")
